--- a/src/components/books.css
+++ b/src/components/books.css
@@ -1,10 +1,9 @@
-.Books {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 20px 0;
+.books-main {
+    width: 1280px;
+    margin: 0 auto;
 }
 
-h2 {
+.books-main h2 {
     margin: 0;
     width: 100%;
     text-align: left;
@@ -12,13 +11,20 @@ h2 {
     color: lightblue;
 }
 
+.books {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 20px 0;
+}
+
+
 .loading {
     color: white;
     font-size: 20px;
     margin-top: 30px;
 }
 
-.Book {
+.book {
     width: calc(11% - 21px);
     background-color: white;
     height: 200px;
@@ -35,7 +41,7 @@ h2 {
     transition: all .5s ease;
 }
 
-.Book:hover {
+.book:hover {
     -moz-transform: scale(1.1);
     -webkit-transform: scale(1.1);
     -o-transform: scale(1.1);
@@ -43,18 +49,18 @@ h2 {
     transform: scale(1.1);
 }
 
-.Book .title {
+.book .title {
     height: 45px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.Book .title h3 {
+.book .title h3 {
     font-size: .6rem;
 }
 
-.Book .cover {
+.book .cover {
     width: 100%;
     height: 155px;
     overflow: hidden;
@@ -64,11 +70,11 @@ h2 {
     position: relative;
 }
 
-.Book .cover img {
+.book .cover img {
     width: 100%;
 }
 
-.Book .cover p {
+.book .cover p {
     position: absolute;
     bottom: 0;
     right: 0;
@@ -77,7 +83,7 @@ h2 {
     font-size: 10px;
 }
 
-.Book a {
+.book a {
     color: black;
     text-decoration: none;
 }
