--- a/src/components/singleLesson.css
+++ b/src/components/singleLesson.css
@@ -1,12 +1,9 @@
 .lesson-main {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-around;
 }
 
 .lesson-nav {
-    position: fixed;
-    top: 100px;
-    left: 50px;
     width: 250px;
     padding: 20px 20px 0;
     color: white;
@@ -36,8 +33,8 @@
 .lesson-content {
     width: 70%;
     padding: 30px;
-    margin: 30px 50px 0 0;
     background-color: white;
     -webkit-box-shadow: 1px 1px 2px 1px rgba(0,0,0,0.5);
     box-shadow: 1px 1px 2px 1px rgba(0,0,0,0.5);
+    align-self: flex-start;
 }
