add styles, add hooks, add order, gray filter on invalid chapters

--- a/src/components/navigation.css
+++ b/src/components/navigation.css
@@ -28,10 +28,20 @@
     text-decoration: none;
     display: block;
     padding: 0 10px;
+    -webkit-transition: all .2s ease;
+    -moz-transition: all .2s ease;
+    -ms-transition: all .2s ease;
+    -o-transition: all .2s ease;
+    transition: all .2s ease;
 }
   
 .NavBar ul li a:hover {
-color: white;
-font-weight: bold;
+    color: white;
+    font-weight: bold;
+    -moz-transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1);
 }
 
