--- a/src/components/chapters.css
+++ b/src/components/chapters.css
@@ -3,6 +3,14 @@
     margin: 0 auto;
 }
 
+.chapters-title {
+    margin: 15px 0 30px;
+}
+
+.chapters-title h3, .chapters-title h4 {
+    margin: 0;
+}
+
 .chapters {
     display: flex;
     flex-wrap: wrap;
@@ -17,6 +25,7 @@
     width: 244px;
     height: 150px;
     margin: 3px;
+    background-color: lightgrey;
     background-size: cover;
     background-position: center;
     overflow: hidden;
@@ -86,4 +95,38 @@
 
 .chapter-img img {
     height: 100%;
+}
+
+.chapter-false {
+    width: 244px;
+    height: 150px;
+    margin: 3px;
+    background-color: gray;
+    background-size: cover;
+    background-position: center;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    filter: grayscale(.9);
+    border: 3px solid lightgrey;
+    -webkit-box-shadow: 1px 1px 2px 1px rgba(0,0,0,0.5);
+    box-shadow: 1px 1px 2px 1px rgba(0,0,0,0.5);
+    opacity: 0.9;
+    z-index: 1;
+}
+
+.chapter-title-false {
+    background-color: lightgrey;
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.chapter-title-false h5 {
+    width: 100%;
+    margin: 0;
+    opacity: 0.5;
 }
