--- a/src/components/navigation.css
+++ b/src/components/navigation.css
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     height: 50px;
-    background-color: darkblue;
+    background-color: blue;
     -webkit-box-shadow: 1px 1px 2px 1px rgba(0,0,0,0.5);
     box-shadow: 1px 1px 2px 1px rgba(0,0,0,0.5);
     z-index: 10;
