--- a/src/components/home.css
+++ b/src/components/home.css
@@ -1,4 +1,6 @@
 .home ul {
+    width: 800px;
+    margin: 0 auto;
     list-style: none;
     display: flex;
     flex-wrap: wrap;
@@ -17,4 +19,25 @@
     box-shadow: 1px 1px 2px 1px rgba(0,0,0,0.5);
     border: 5px solid lightblue;
     cursor: pointer;
+    -webkit-transition: all .5s ease;
+    -moz-transition: all .5s ease;
+    -ms-transition: all .5s ease;
+    -o-transition: all .5s ease;
+    transition: all .5s ease;
+    z-index: 1;
+}
+
+.home ul li:hover {
+    -moz-transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1);
+    z-index: 2;
+}
+
+.home ul a {
+    color: black;
+    text-decoration: none;
+    font-weight: bold;
 }
