add images to home btn

--- a/src/components/chapters.css
+++ b/src/components/chapters.css
@@ -58,6 +58,7 @@
 }
 
 .chapter-elt:hover {
+    filter: grayscale(0);
     -moz-transform: scale(1.1);
     -webkit-transform: scale(1.1);
     -o-transform: scale(1.1);
