--- a/src/components/home.css
+++ b/src/components/home.css
@@ -12,9 +12,12 @@
     margin: 10px;
     padding: 10px;
     background-color: white;
+    background-size: 60%;
+    background-repeat: no-repeat;
+    background-position: center;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
     -webkit-box-shadow: 1px 1px 2px 1px rgba(0,0,0,0.5);
     box-shadow: 1px 1px 2px 1px rgba(0,0,0,0.5);
     border: 5px solid lightblue;
