--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 .App {
   text-align: center;
-  padding: 70px 0;
 }
 
 .App-logo {
@@ -36,4 +35,9 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.Section-container {
+  width: 1080px;
+  margin: 0 auto;
 }
