--- a/src/components/singleLesson.css
+++ b/src/components/singleLesson.css
@@ -1,6 +1,7 @@
 .lesson-main {
     width: 1280px;
     margin: 0 auto;
+    padding: 100px 0;
     display: flex;
     justify-content: space-around;
 }
@@ -49,13 +50,13 @@
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    color: blue;
+    color: red;
     -webkit-box-shadow: 1px 1px 2px 1px rgba(0,0,0,0.5);
     box-shadow: 1px 1px 2px 1px rgba(0,0,0,0.5);
     outline: 0;
 }
 
-.index-nav button:disabled {
-    opacity: .5;
-    color: grey;
+.lesson-nav button:disabled {
+    color: lightcoral;
+    background-color: lightgrey;
 }
