--- a/src/index.css
+++ b/src/index.css
@@ -5,13 +5,14 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: lightgrey;
+  /* background-color: lightgrey;
   background-image: url('https://www.pngkey.com/png/full/666-6663236_blue-header-png-6-png-image-blue.png');
   background-size: 100%;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat; */
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
