--- a/src/components/chapters.css
+++ b/src/components/chapters.css
@@ -1,11 +1,13 @@
 .chapter-main {
-    width: 1280px;
+    width: 1080px;
     margin: 0 auto;
+    padding: 100px 0;
 }
 
 .chapter-main h4 {
-    color: white;
+    color: black;
     font-size: 20px;
+    margin: 0 0 30px
 }
 
 .chapters-title {
@@ -27,6 +29,7 @@
 .chapters {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .chapters a {
@@ -37,7 +40,7 @@
 .chapter-elt {
     width: 244px;
     height: 150px;
-    margin: 3px;
+    margin: 5px 5px 15PX;
     background-color: lightgrey;
     background-size: cover;
     background-position: center;
@@ -114,7 +117,7 @@
 .chapter-false {
     width: 244px;
     height: 150px;
-    margin: 3px;
+    margin: 5px 5px 15PX;
     background-color: gray;
     background-size: cover;
     background-position: center;
@@ -161,7 +164,7 @@
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    color: blue;
+    color: red;
     -webkit-box-shadow: 1px 1px 2px 1px rgba(0,0,0,0.5);
     box-shadow: 1px 1px 2px 1px rgba(0,0,0,0.5);
     outline: 0;
