--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 30px;
     line-height: 30px;
-    background-color: blue;
+    background-color: red;
     position: fixed;
     z-index: 5;
     bottom: 0;
@@ -12,6 +12,7 @@
 
 .footer h2 {
     margin: 0;
+    text-align: center;
     font-size: 12px;
     color: white;
 }
