--- a/src/components/chapters.css
+++ b/src/components/chapters.css
@@ -1,35 +1,24 @@
 .chapter-main {
-    width: 1080px;
-    margin: 0 auto;
     padding: 100px 0;
-}
-
-.chapter-main h4 {
-    color: black;
-    font-size: 20px;
-    margin: 0 0 30px
+    background-image: url('https://image.freepik.com/photos-gratuite/surface-noire-abstraite-rustique_23-2148287666.jpg');
+    background-size: cover;
+    min-height: calc(100vh - 200px);
 }
 
 .chapters-title {
-    height: 50px;
-    position: fixed;
-    z-index: 10;
-    top: 0;
-    right: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
+    color: orange;
+    margin-bottom: 30px;
 }
 
-.chapters-title h3 {
+.chapters-title h3, .chapters-title h4 {
+    font-size: 20px;
     margin: 0;
 }
 
 .chapters {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
 }
 
 .chapters a {
@@ -40,7 +29,7 @@
 .chapter-elt {
     width: 244px;
     height: 150px;
-    margin: 5px 5px 15PX;
+    margin: 5px 10px 15PX;
     background-color: lightgrey;
     background-size: cover;
     background-position: center;
@@ -48,7 +37,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    filter: grayscale(.7);
+    filter: grayscale(.8);
     border: 3px solid white;
     -webkit-box-shadow: 1px 1px 2px 1px rgba(0,0,0,0.5);
     box-shadow: 1px 1px 2px 1px rgba(0,0,0,0.5);
@@ -164,7 +153,7 @@
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    color: red;
+    color: orange;
     -webkit-box-shadow: 1px 1px 2px 1px rgba(0,0,0,0.5);
     box-shadow: 1px 1px 2px 1px rgba(0,0,0,0.5);
     outline: 0;
