--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 30px;
     line-height: 30px;
-    background-color: red;
+    background-color: orange;
     position: fixed;
     z-index: 5;
     bottom: 0;
