--- a/src/components/navigation.css
+++ b/src/components/navigation.css
@@ -2,16 +2,21 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
+    width: calc(100% - 80px);
     height: 50px;
-    background-color: red;
+    background-color: orange;
     -webkit-box-shadow: 1px 1px 2px 1px rgba(0,0,0,0.5);
     box-shadow: 1px 1px 2px 1px rgba(0,0,0,0.5);
     z-index: 10;
+    padding: 0 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .NavBar ul {
     margin: 0;
+    padding: 0;
 }
 
 .NavBar ul li {
@@ -24,6 +29,7 @@
 }
 
 .NavBar ul li a {
+    font-family: 'Fredericka the Great', cursive;
     font-size: 20px;
     color: white;
     text-decoration: none;
@@ -45,4 +51,3 @@
     -ms-transform: scale(1.1);
     transform: scale(1.1);
 }
-
