--- a/src/components/lessons.css
+++ b/src/components/lessons.css
@@ -2,6 +2,8 @@
     padding: 100px 0;
     background-image: url('https://image.freepik.com/photos-gratuite/surface-noire-abstraite-rustique_23-2148287666.jpg');
     background-size: cover;
+    background-attachment: fixed;
+    background-position: bottom;
     min-height: calc(100vh - 200px);
 }
 
